Last edition of Swagger documentation
