# backend/app/docs/swagger.json
@@ -9,7 +9,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "localhost:22025",
     "basePath": "/api",
     "paths": {
         "/add_tutor": {
@@ -47,7 +47,7 @@
                 }
             }
         },
-        "/api/checkTokens": {
+        "/checkTokens": {
             "post": {
                 "description": "возращяет успешные ответ, если токены не просрочены",
                 "consumes": [
@@ -71,35 +71,6 @@
                         "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/api.Error_answer"
-                        }
-                    },
-                    "405": {
-                        "description": "Method Not Allowed",
-                        "schema": {
-                            "$ref": "#/definitions/api.Error_answer"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/hello": {
-            "get": {
-                "description": "Просто говорит привет, а точнее \"ok\"",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "test"
-                ],
-                "summary": "Функция проверки доступности",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.Success_answer"
                         }
                     },
                     "405": {
@@ -172,12 +143,12 @@
                 "summary": "Запрос на сброс пароля",
                 "parameters": [
                     {
-                        "description": "Email и пароль",
+                        "description": "Email",
                         "name": "credentials",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/database.User"
+                            "$ref": "#/definitions/api.Email_struct"
                         }
                     }
                 ],
@@ -238,6 +209,93 @@
                 }
             }
         },
+        "/gettrackers": {
+            "post": {
+                "description": "Пользовтаель получет трекеры с сервера",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "trackers"
+                ],
+                "summary": "Для получения трекеров с сервера",
+                "parameters": [
+                    {
+                        "description": "Access Token",
+                        "name": "credentials",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.Get_trackers_request"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Trackers"
+                        }
+                    },
+                    "304": {
+                        "description": "Not Modified",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error_answer"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error_answer"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error_answer"
+                        }
+                    },
+                    "405": {
+                        "description": "Method Not Allowed",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error_answer"
+                        }
+                    }
+                }
+            }
+        },
+        "/hello": {
+            "get": {
+                "description": "Просто говорит привет, а точнее \"ok\"",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "test"
+                ],
+                "summary": "Функция проверки доступности",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Success_answer"
+                        }
+                    },
+                    "405": {
+                        "description": "Method Not Allowed",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error_answer"
+                        }
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "description": "Вход по email и паролю, возвращает JWT-токен",
@@ -258,7 +316,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/database.User"
+                            "$ref": "#/definitions/api.User_email_password"
                         }
                     }
                 ],
@@ -292,11 +350,6 @@
         },
         "/questionnaire": {
             "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Доступно только аутентифицированным пользователям",
                 "consumes": [
                     "application/json"
@@ -456,6 +509,17 @@
                     "registration"
                 ],
                 "summary": "Установка пароля",
+                "parameters": [
+                    {
+                        "description": "Email и пароль",
+                        "name": "credentials",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.User_email_password"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -526,7 +590,7 @@
         },
         "/savetrackers": {
             "post": {
-                "description": "Пользовтаель получет трекеры с сервера",
+                "description": "Пользовтаель отправляет трекеры с устройства. Сервер записывает их в базуданных, чтобы трекеры были доступны на раззных устройствах",
                 "consumes": [
                     "application/json"
                 ],
@@ -534,17 +598,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "registration"
+                    "trackers"
                 ],
-                "summary": "Для получения трекеров с сервера",
+                "summary": "Для сохранения трекеров на сервере",
                 "parameters": [
                     {
-                        "description": "Access Token",
+                        "description": "Токен, время и трекеры",
                         "name": "credentials",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.Get_trackers_request"
+                            "$ref": "#/definitions/api.Tracker_save"
                         }
                     }
                 ],
@@ -552,7 +616,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.Trackers"
+                            "$ref": "#/definitions/api.Success_answer"
                         }
                     },
                     "304": {
@@ -582,7 +646,7 @@
                 }
             }
         },
-        "/update": {
+        "/update_university_json": {
             "get": {
                 "description": "Возвращяет universities.json файл",
                 "produces": [
@@ -737,6 +801,17 @@
                 }
             }
         },
+        "api.User_email_password": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "database.Tutor": {
             "type": "object",
             "properties": {
@@ -783,9 +858,6 @@
                     "type": "string"
                 }
             }
-        },
-        "database.User": {
-            "type": "object"
         }
     }
 }
